--- a/src/pages/CSS/Header.css
+++ b/src/pages/CSS/Header.css
@@ -91,6 +91,76 @@ color: #323743;
   }
   
   header .hero button:hover {
-    background-color: #4b00b2;
+    background-color: #092635;
   }
   
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+  header nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  header ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  header .hero {
+    padding: 30px 10px;
+    height: auto;
+  }
+
+  header .hero h1 {
+    font-size: 48px;
+    line-height: 1.2;
+  }
+
+  header .hero p {
+    font-size: 18px;
+    line-height: 1.4;
+  }
+
+  .hero-button1 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  header nav {
+    padding: 10px;
+  }
+
+  header .logo {
+    font-size: 20px;
+  }
+
+  header .hero {
+    padding: 20px 10px;
+    align-items: center;
+    text-align: center;
+  }
+
+  header .hero h1 {
+    font-size: 30px;
+    text-align: start;
+    margin: 0px;
+    height: 52px;
+    
+  }
+
+  header .hero p {
+    font-size: 12px;
+    text-align: start;
+    max-width: 230px;
+    margin: 0px;
+    
+  }
+
+  .hero-button1 {
+    font-size: 8px;
+    height: 20px;
+    width: 60px;
+    padding:5px 10px
+  }
+}
