--- a/src/pages/CSS/News.css
+++ b/src/pages/CSS/News.css
@@ -38,9 +38,9 @@
 }
 
 .explore-button {
-  background-color: #fff;
-  
-  border: 2px solid #6d31ed;
+  background-color: #092635;
+  color: #FFFFFF;
+  border: 2px solid #FFFFFF;
   padding: 10px 20px;
   border-radius: 4px;
   cursor: pointer;
@@ -65,6 +65,7 @@
 .arrow-button img {
   width: 24px;
   height: 24px;
+  color: #092635;
 }
 
 .news-container {
