--- a/src/pages/CSS/Story.css
+++ b/src/pages/CSS/Story.css
@@ -64,3 +64,64 @@ opacity: 0px;
   color: #666; /* Medium grey color for the paragraph */
   line-height: 1.6;
 }
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+  .story h2 {
+    font-size: 36px;
+    margin-bottom: 15px;
+  }
+
+  .story-content button {
+    font-size: 16px;
+    padding: 8px 16px;
+  }
+
+  .story-content p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 992px) {
+  .story-content button {
+    bottom: 10px; /* Adjust button position for smaller screens */
+  }
+
+  .story-content p {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 768px) {
+  .story h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+
+  .story-content button {
+    font-size: 14px;
+    padding: 6px 12px;
+  }
+
+  .story-content p {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 576px) {
+  .story h2 {
+    font-size: 22px;
+    margin-bottom: 5px;
+  }
+
+  .story-content button {
+    font-size: 10px;
+    padding: 2px 9px;
+    width: 90px;
+    bottom: 50px;
+  }
+
+  .story-content p {
+    font-size: 12px;
+  }
+}
